@@ -2,6 +2,8 @@ Change log for Bos Wars
 -----------------------
 
 Version 2.5.0:
+- Free OpenGL textures before changing video mode since not all platforms
+destroy the OpenGL context (Jimmy Salmon)
 - Fix crash where graphics were loaded before the video subsystem was
 started (Francois Beerten)
 - Remove runtime libraries from the repository (Francois Beerten)
